회원가입, 내정보 수정

--- a/src/main/resources/templates/memberPages/memberPasswordCheck.html
+++ b/src/main/resources/templates/memberPages/memberPasswordCheck.html
@@ -45,29 +45,23 @@
   <input type="password" class="width-450 form-control" name="memberPassword" id="pwd" placeholder="비밀번호를 입력하세요">
   <span id="pwdError"></span>
   </div>
-    <div>
-  <label for="repwd">비밀번호 확인</label>
-  <input type="password" class="width-450 form-control" name="memberPassword2" id="repwd"  placeholder="비밀번호를 재입력하세요">
-  <span id="rePwderror"></span>
-    </div>
-  <input type="submit" class="btn btn-success" style="width: 400px; margin-top: 20px;" onclick="check_pwd()" value="정보 수정하기">
+  <input type="submit" id ="passwordCheckBtn" class="btn btn-success" style="width: 400px; margin-top: 20px;" onclick="check_pwd()" value="정보 수정하기">
 </div>
 </div>
 </body>
 <script th:inline="javascript">
   const check_pwd = () => {
     const pwd = document.getElementById("pwd").value;
-    const repwd = document.getElementById("repwd").value;
-    const DBPass = [[${session.member.memberPassword}]]
-    if (pwd == "") {
+    const DBPass = [[${session.member.memberPassword}]];
+    if (pwd === "") {
       alert("비밀번호를 입력해주세요.");
-    } else if (pwd != repwd) {
-        alert("비밀번호가 일치하지 않습니다.");
-    } else if(DBPass == repwd && DBPass == pwd) {
+        return false;
+    } else if(DBPass === pwd) {
       // document.passwordCheck.submit();
       location.href="/member/update";
     }else {
         alert("잘못 입력하셨습니다.");
+        return false;
     }
 
   }
