카카오 로그인 인터셉터 추가

--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -89,6 +89,7 @@
     //0. init 안에 앱 키 중 'javascript 키' 넣기
     Kakao.init('5ca0c2c747c6a9590ce005b29d09b00c');
     $("#kakao-login-btn").on("click", function () {
+        const url = [[${redirectURL}]];
         //1. 로그인 시도
         Kakao.Auth.login({
             success: function (authObj) {
@@ -105,7 +106,7 @@
                         //scope: 카카오 로그인 동의항목
                         scopes : ['account_email', 'profile_nickname'];
                         // alert("로그인 성공")
-                        kakao(userId, memberEmail, memberName, accessToken);
+                        kakao(userId, memberEmail, memberName, accessToken , url);
                     }
                 })
                 console.log(authObj);
@@ -118,7 +119,7 @@
 
     })
 
-    function kakao(userId, memberEmail, memberName, accessToken) {
+    function kakao(userId, memberEmail, memberName, accessToken , url) {
         let f = document.createElement('form');
 
         let obj;
@@ -147,11 +148,20 @@
         obj4.setAttribute('name', 'accessToken');
         obj4.setAttribute('value', accessToken);
 
+        let obj5;
+        obj5 = document.createElement('input');
+        obj5.setAttribute('type', 'hidden');
+        obj5.setAttribute('name', 'url');
+        obj5.setAttribute('value', url);
+
+
+
 
         f.append(obj);
         f.append(obj2);
         f.append(obj3);
         f.append(obj4);
+        f.append(obj5);
         f.setAttribute('method', 'post');
         f.setAttribute('action', '/member/kakao');
         document.body.append(f);
