리뷰 등록 수정

--- a/src/main/resources/templates/orderPages/orderList.html
+++ b/src/main/resources/templates/orderPages/orderList.html
@@ -136,6 +136,15 @@
         const result = starCount.replace(regex, "");
         const number = parseInt(result);
 
+        if (commentContents == "") {
+            alert("내용을 입력해주세요.");
+            return;
+        }
+        if (number == 0) {
+            alert("별점을 입력해주세요.");
+            return;
+        }
+
 
         $.ajax({
             type: "get",
