주문신청 수정

--- a/src/main/resources/templates/orderPages/orderSave2.html
+++ b/src/main/resources/templates/orderPages/orderSave2.html
@@ -107,7 +107,7 @@
                                name="memberMobile" id="memberMobile">
                     </div>
                     <div>
-                    <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
+                    <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block; border: 1px solid #ccc; padding: 5px;  "
                            name="memberEmail" id="memberEmail">
                     </div>
                 </section>
