--- a/src/main/resources/templates/orderPages/orderSave.html
+++ b/src/main/resources/templates/orderPages/orderSave.html
@@ -100,7 +100,7 @@
                     </div>
 
                     <div>
-                        <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block"
+                        <input type="text" th:value="${session.member.memberEmail}" readonly style="display: block; border: 1px solid #ccc; padding: 5px;"
                                name="memberEmail" id="memberEmail">
                     </div>
                 </section>
